[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hq_diffusion"
version = "0.1.0"
description = "high quality image diffusion"
authors = [
    { name = "Xiaochuan Zou", email = "zouxiaochuan@163.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "tensorboard>2.4.1",
    "faster-coco-eval",
    "loguru",
    "supervision",
    "peft<=0.15.2",
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]
include = ["hq_diffusion*"]
exclude = ["tests"]

[tool.setuptools.package-data]
hq_diffusion = ["**/*.yml", "*.yml"]